trunk/Source/include/GLS_CUDA_RunTime.hpp



struct TCudaChannelFormatDesc;


struct DECLSPEC_DRECORD TCudaChannelFormatDesc
{
public:
	int x;
	int y;
	int z;
	int w;
	TCudaChannelFormatKind f;
};



struct DECLSPEC_DRECORD TcudaArray
{
};



enum TcudaMemcpyKind : unsigned int { cudaMemcpyHostToHost, cudaMemcpyHostToDevice, cudaMemcpyDeviceToHost, cudaMemcpyDeviceToDevice };



struct TCudaDeviceProp;

typedef TCudaDeviceProp *PCudaDeviceProp;


struct DECLSPEC_DRECORD TCudaDeviceProp
{
public:
	System::StaticArray<char, 256> name;
	NativeUInt totalGlobalMem;
	NativeUInt sharedMemPerBlock;
	int regsPerBlock;
	int warpSize;
	NativeUInt memPitch;
	int maxThreadsPerBlock;
	System::StaticArray<int, 3> maxThreadsDim;
	System::StaticArray<int, 3> maxGridSize;
	int clockRate;
	NativeUInt totalConstMem;
	int major;
	int minor;
	NativeUInt textureAlignment;
	int deviceOverlap;
	int multiProcessorCount;
	int kernelExecTimeoutEnabled;
	int egrated;
	int canMapHostMemory;
	int computeMode;
	int maxTexture1D;
	System::StaticArray<int, 2> maxTexture2D;
	System::StaticArray<int, 3> maxTexture3D;
	System::StaticArray<int, 3> maxTexture2DArray;
	NativeUInt surfaceAlignment;
	int concurrentKernels;
	int ECCEnabled;
	int pciBusID;
	int pciDeviceID;
	int tccDriver;
	System::StaticArray<int, 21> __cudaReserved;
};



typedef TcudaArray *PcudaArray;


typedef TcudaError cudaError_t;


typedef int cudaStream_t;

extern PACKAGE TcudaError __stdcall (*cudaMalloc)(void *devPtr, NativeUInt size);

extern PACKAGE TcudaError __stdcall (*cudaMallocHost)(void * &ptr, NativeUInt size);

extern PACKAGE TcudaError __stdcall (*cudaMallocPitch)(void *devPtr, NativeUInt &pitch, NativeUInt width, NativeUInt height);

extern PACKAGE TcudaError __stdcall (*cudaMallocArray)(void * &aarray, TCudaChannelFormatDesc &desc, NativeUInt width, NativeUInt height);

extern PACKAGE TcudaError __stdcall (*cudaFree)(void * devPtr);

extern PACKAGE TcudaError __stdcall (*cudaFreeHost)(void * ptr);

extern PACKAGE TcudaError __stdcall (*cudaFreeArray)(const void * aarray);

extern PACKAGE TcudaError __stdcall (*cudaMemcpy)(void * dst, void * src, NativeUInt count, TcudaMemcpyKind kind);

extern PACKAGE TcudaError __stdcall (*cudaMemcpyToArray)(PcudaArray &dst, NativeUInt wOffset, NativeUInt hOffset, void *src, NativeUInt count, TcudaMemcpyKind kind);

extern PACKAGE TcudaError __stdcall (*cudaMemcpyFromArray)(void *dst, const PcudaArray src, NativeUInt wOffset, NativeUInt hOffset, NativeUInt count, TcudaMemcpyKind kind);

extern PACKAGE TcudaError __stdcall (*cudaMemcpyArrayToArray)(PcudaArray dst, NativeUInt wOffsetDst, NativeUInt hOffsetDst, const PcudaArray src, NativeUInt wOffsetSrc, NativeUInt hOffsetSrc, NativeUInt count, const TcudaMemcpyKind kind/* = (TcudaMemcpyKind)(0x3)*/);

extern PACKAGE TcudaError __stdcall (*cudaMemcpy2D)(void *dst, NativeUInt dpitch, void *src, NativeUInt spitch, NativeUInt width, NativeUInt height, TcudaMemcpyKind kind);

extern PACKAGE TcudaError __stdcall (*cudaMemcpy2DToArray)(PcudaArray dst, NativeUInt wOffset, NativeUInt hOffset, void *src, NativeUInt spitch, NativeUInt width, NativeUInt height, TcudaMemcpyKind kind);

extern PACKAGE TcudaError __stdcall (*cudaMemcpy2DFromArray)(void *dst, NativeUInt dpitch, PcudaArray src, NativeUInt wOffset, NativeUInt hOffset, NativeUInt width, NativeUInt height, TcudaMemcpyKind kind);

extern PACKAGE TcudaError __stdcall (*cudaMemcpy2DArrayToArray)(PcudaArray dst, NativeUInt wOffsetDst, NativeUInt hOffsetDst, PcudaArray src, NativeUInt wOffsetSrc, NativeUInt hOffsetSrc, NativeUInt width, NativeUInt height, const TcudaMemcpyKind kind/* = (TcudaMemcpyKind)(0x3)*/);

extern PACKAGE TcudaError __stdcall (*cudaMemcpyToSymbol)(char * symbol, void *src, NativeUInt count, const NativeUInt offset/* = (NativeUInt)(0x0)*/, const TcudaMemcpyKind kind/* = (TcudaMemcpyKind)(0x1)*/);

extern PACKAGE TcudaError __stdcall (*cudaMemcpyFromSymbol)(void *dst, char * symbol, NativeUInt count, const NativeUInt offset/* = (NativeUInt)(0x0)*/, const TcudaMemcpyKind kind/* = (TcudaMemcpyKind)(0x2)*/);

extern PACKAGE TcudaError __stdcall (*cudaMemcpyAsync)(void *dst, const void *src, NativeUInt count, TcudaMemcpyKind kind, int stream);

extern PACKAGE TcudaError __stdcall (*cudaMemcpyToArrayAsync)(PcudaArray dst, NativeUInt wOffset, NativeUInt hOffset, const void *src, NativeUInt count, TcudaMemcpyKind kind, int stream);

extern PACKAGE TcudaError __stdcall (*cudaMemcpyFromArrayAsync)(void *dst, const PcudaArray src, NativeUInt wOffset, NativeUInt hOffset, NativeUInt count, TcudaMemcpyKind kind, int stream);

extern PACKAGE TcudaError __stdcall (*cudaMemcpy2DAsync)(void *dst, NativeUInt dpitch, const void *src, NativeUInt spitch, NativeUInt width, NativeUInt height, TcudaMemcpyKind kind, int stream);

extern PACKAGE TcudaError __stdcall (*cudaMemcpy2DToArrayAsync)(PcudaArray dst, NativeUInt wOffset, NativeUInt hOffset, const void *src, NativeUInt spitch, NativeUInt width, NativeUInt height, TcudaMemcpyKind kind, int stream);

extern PACKAGE TcudaError __stdcall (*cudaMemcpy2DFromArrayAsync)(void *dst, NativeUInt dpitch, const PcudaArray src, NativeUInt wOffset, NativeUInt hOffset, NativeUInt width, NativeUInt height, TcudaMemcpyKind kind, int stream);

extern PACKAGE TcudaError __stdcall (*cudaMemcpyToSymbolAsync)(const char * symbol, const void *src, NativeUInt count, NativeUInt offset, TcudaMemcpyKind kind, int stream);

extern PACKAGE TcudaError __stdcall (*cudaMemcpyFromSymbolAsync)(void *dst, const char * symbol, NativeUInt count, NativeUInt offset, TcudaMemcpyKind kind, int stream);

extern PACKAGE TcudaError __stdcall (*cudaMemset)(void *devPtr, int value, NativeUInt count);

extern PACKAGE TcudaError __stdcall (*cudaMemset2D)(void *devPtr, NativeUInt pitch, int value, NativeUInt width, NativeUInt height);

extern PACKAGE TcudaError __stdcall (*cudaGetSymbolAddress)(void * &devPtr, const char * symbol);

extern PACKAGE TcudaError __stdcall (*cudaGetSymbolSize)(NativeUInt &size, const char * symbol);

extern PACKAGE TcudaError __stdcall (*cudaGetDeviceCount)(int &count);

extern PACKAGE TcudaError __stdcall (*cudaGetDeviceProperties)(TCudaDeviceProp &prop, int device);

extern PACKAGE TcudaError __stdcall (*cudaChooseDevice)(int &device, const PCudaDeviceProp prop);

extern PACKAGE TcudaError __stdcall (*cudaSetDevice)(int device);

extern PACKAGE TcudaError __stdcall (*cudaGetDevice)(int &device);

extern PACKAGE TcudaError __stdcall (*cudaGetLastError)(void);

extern PACKAGE TcudaError __stdcall (*cudaGLSetGLDevice)(int device);

extern PACKAGE TcudaError __stdcall (*cudaGLRegisterBufferObject)(unsigned bufObj);

extern PACKAGE TcudaError __stdcall (*cudaGLMapBufferObject)(void * devPtr, unsigned bufObj);

extern PACKAGE TcudaError __stdcall (*cudaGLUnmapBufferObject)(unsigned bufObj);

extern PACKAGE TcudaError __stdcall (*cudaGLUnregisterBufferObject)(unsigned bufObj);

extern PACKAGE TcudaError __stdcall (*cudaGLSetBufferObjectMapFlags)(unsigned bufObj, TCudaGLMapFlags flags);

extern PACKAGE TcudaError __stdcall (*cudaGLMapBufferObjectAsync)(void * &devPtr, unsigned bufObj, int stream);

extern PACKAGE TcudaError __stdcall (*cudaGLUnmapBufferObjectAsync)(unsigned bufObj, int stream);

extern PACKAGE char * __stdcall (*cudaGetErrorString)(TcudaError error);

extern PACKAGE System::UnicodeString __fastcall cudaGetLastErrorString(void);