trunk/Source/ComputeAPIs/GLS_CUDA_Runtime.pas


function cudaMalloc(var devPtr;
  size: size_t): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMallocHost(var ptr: Pointer;
  size: size_t): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMallocPitch(var devPtr;
  var pitch: size_t;
  width: size_t;
  height: size_t): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMallocArray(var aarray: Pointer;
  var desc: TCudaChannelFormatDesc;
  width: size_t;
  height: size_t): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaFree(devPtr: Pointer): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaFreeHost(ptr: Pointer): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaFreeArray(const aarray: Pointer): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpy(dst: Pointer; src: Pointer; count: size_t;
  kind: TcudaMemcpyKind): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpyToArray(var dst: PcudaArray; wOffset: size_t; hOffset:
  size_t; var src; count: size_t; kind: TcudaMemcpyKind): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpyFromArray(var dst; const src: PcudaArray; wOffset: size_t;
  hOffset: size_t; count: size_t; kind: TcudaMemcpyKind): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpyArrayToArray(dst: PcudaArray; wOffsetDst: size_t; hOffsetDst:
  size_t; const src: PcudaArray; wOffsetSrc: size_t; hOffsetSrc: size_t; count:
  size_t; const kind: TcudaMemcpyKind = cudaMemcpyDeviceToDevice): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpy2D(var dst; dpitch: size_t; var src; spitch: size_t; width:
  size_t; height: size_t; kind: TcudaMemcpyKind): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpy2DToArray(dst: PcudaArray; wOffset: size_t; hOffset: size_t;
  var src; spitch: size_t; width: size_t; height: size_t; kind: TcudaMemcpyKind):
  cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpy2DFromArray(var dst; dpitch: size_t; src: PcudaArray;
  wOffset: size_t; hOffset: size_t; width: size_t; height: size_t; kind:
  TcudaMemcpyKind): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpy2DArrayToArray(dst: PcudaArray; wOffsetDst: size_t;
  hOffsetDst: size_t; src: PcudaArray; wOffsetSrc: size_t; hOffsetSrc: size_t;
  width: size_t; height: size_t; const kind: TcudaMemcpyKind =
  cudaMemcpyDeviceToDevice): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpyToSymbol(symbol: PAnsiChar; var src; count: size_t; const
  offset: size_t = 0; const kind: TcudaMemcpyKind = cudaMemcpyHostToDevice):
  cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpyFromSymbol(var dst; symbol: PAnsiChar; count: size_t; const
  offset: size_t = 0; const kind: TcudaMemcpyKind = cudaMemcpyDeviceToHost):
  cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

{+//***************************************************************************}
{-** }
{-** }
{-** }
{=*****************************************************************************}

function cudaMemcpyAsync(var dst; const src; count: size_t; kind:
  TcudaMemcpyKind; stream: cudaStream_t): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpyToArrayAsync(dst: PcudaArray; wOffset: size_t; hOffset:
  size_t; const src; count: size_t; kind: TcudaMemcpyKind; stream: cudaStream_t):
  cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpyFromArrayAsync(var dst; const src: PcudaArray; wOffset:
  size_t; hOffset: size_t; count: size_t; kind: TcudaMemcpyKind; stream:
  cudaStream_t): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpy2DAsync(var dst; dpitch: size_t; const src; spitch: size_t;
  width: size_t; height: size_t; kind: TcudaMemcpyKind; stream: cudaStream_t):
  cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpy2DToArrayAsync(dst: PcudaArray; wOffset: size_t; hOffset:
  size_t; const src; spitch: size_t; width: size_t; height: size_t; kind:
  TcudaMemcpyKind; stream: cudaStream_t): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpy2DFromArrayAsync(var dst; dpitch: size_t; const src:
  PcudaArray; wOffset: size_t; hOffset: size_t; width: size_t; height: size_t;
  kind: TcudaMemcpyKind; stream: cudaStream_t): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpyToSymbolAsync(const symbol: PAnsiChar; const src; count:
  size_t; offset: size_t; kind: TcudaMemcpyKind; stream: cudaStream_t):
  cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemcpyFromSymbolAsync(var dst; const symbol: PAnsiChar; count:
  size_t; offset: size_t; kind: TcudaMemcpyKind; stream: cudaStream_t):
  cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

///*****************************************************************************
//*                                                                            *
//*                                                                            *
//*                                                                            *
//*****************************************************************************/

function cudaMemset(var devPtr; value: Integer; count: size_t): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaMemset2D(var devPtr; pitch: size_t; value: Integer; width: size_t;
  height: size_t): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

///*****************************************************************************
//*                                                                            *
//*                                                                            *
//*                                                                            *
//*****************************************************************************/

function cudaGetSymbolAddress(var devPtr: Pointer; const symbol: PAnsiChar):
  cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaGetSymbolSize(var size: size_t; const symbol: PAnsiChar):
  cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

{+//***************************************************************************}
{-** }
{-** }
{-** }
{=*****************************************************************************}

function cudaGetDeviceCount(var count: Integer): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaGetDeviceProperties(var prop: TCudaDeviceProp;
  device: Integer): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaChooseDevice(var device: Integer;
  const prop: PcudaDeviceProp): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaSetDevice(device: Integer): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaGetDevice(var device: Integer): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

{+//****************************************************************************** }
{-** }
{-** }
{-** }
{=*******************************************************************************/ }

function cudaGetLastError: cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

{+//****************************************************************************** }
{-** }
{-** }
{-** }
{=*******************************************************************************/ }
function cudaGLSetGLDevice(device: Integer): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaGLRegisterBufferObject(bufObj: GLuint): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaGLMapBufferObject(devPtr: Pointer; bufObj: GLuint): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaGLUnmapBufferObject(bufObj: GLuint): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaGLUnregisterBufferObject(bufObj: GLuint): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaGLSetBufferObjectMapFlags(bufObj: GLuint; flags: TCudaGLMapFlags):
  cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaGLMapBufferObjectAsync(var devPtr: Pointer; bufObj: GLuint; stream:
  cudaStream_t): cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaGLUnmapBufferObjectAsync(bufObj: GLuint; stream: cudaStream_t):
  cudaError_t;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaGetErrorString(error: cudaError_t): PAnsiChar;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}external CUDARTDLL;

function cudaGetLastErrorString: string;

implementation

function cudaGetLastErrorString: string;
begin
  Result := string(cudaGetErrorString(cudaGetLastError));
end;

end.

